--- a/getting-started/setup.html
+++ b/getting-started/setup.html
@@ -161,8 +161,8 @@
                     <main>
                         <h1><a class="header" href="#installation" id="installation">Installation</a></h1>
 <p>To install Swift for WebAssembly toolchain, download one of the packages below and follow the instructions for your operating system.</p>
-<h2><a class="header" href="#releases" id="releases">Releases</a></h2>
-<h3><a class="header" href="#swiftwasm-59" id="swiftwasm-59">SwiftWasm 5.9</a></h3>
+<h2><a class="header" href="#latest-release" id="latest-release">Latest Release</a></h2>
+<p><strong>SwiftWasm 5.9</strong></p>
 <p>Tag: <a href="https://github.com/swiftwasm/swift/releases/tag/swift-wasm-5.9.1-RELEASE">swift-wasm-5.9.1-RELEASE</a></p>
 <table><thead><tr><th align="center">Download</th><th align="center">Docker Tag</th></tr></thead><tbody>
 <tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.9.1-RELEASE/swift-wasm-5.9.1-RELEASE-macos_arm64.pkg">macOS arm64</a></td><td align="center">Unavailable</td></tr>
@@ -173,90 +173,54 @@
 <tr><td align="center"><a href="https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.9.1-RELEASE/swift-wasm-5.9.1-RELEASE-ubuntu22.04_x86_64.tar.gz">Ubuntu 22.04 x86_64</a></td><td align="center"><a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">5.9, 5.9-jammy, jammy, latest</a></td></tr>
 </tbody></table>
 <p>You can download the latest development snapshot from <a href="https://github.com/swiftwasm/swift/releases">the Releases page</a></p>
-<h1><a class="header" href="#using-downloads" id="using-downloads">Using Downloads</a></h1>
-<h2><a class="header" href="#macos" id="macos">macOS</a></h2>
-<p>An Xcode toolchain (<code>.xctoolchain</code>) includes a copy of the compiler, linker, and other related tools needed to provide a cohesive development experience for working in a specific version of Swift.</p>
-<h3><a class="header" href="#requirements" id="requirements">Requirements</a></h3>
-<ul>
-<li>macOS 10.15 or later</li>
-</ul>
-<h3><a class="header" href="#installation-1" id="installation-1">Installation</a></h3>
+<h2><a class="header" href="#toolchain-installation" id="toolchain-installation">Toolchain Installation</a></h2>
+<h3><a class="header" href="#macos" id="macos">macOS</a></h3>
 <ol>
-<li><a href="https://book.swiftwasm.org/getting-started/setup.html#swiftwasm-57">Download the latest package release</a> according to your CPU architecture (arm64 for <a href="https://support.apple.com/en-us/HT211814">Apple Silicon Macs</a>, x86 for Intel Macs).</li>
+<li><a href="#latest-release">Download the latest package release</a> according to your CPU architecture (arm64 for <a href="https://support.apple.com/en-us/HT211814">Apple Silicon Macs</a>, x86 for Intel Macs).</li>
 <li>Run the package installer, which will install an Xcode toolchain into <code>/Library/Developer/Toolchains/</code>.</li>
-<li>To use the Swift toolchain with command-line tools, use <code>xcrun --toolchain swiftwasm</code> or add the Swift toolchain to your path as follows:</li>
+<li>To use the Swift toolchain with command-line tools, use <code>env TOOLCHAINS=swiftwasm swift</code> or add the Swift toolchain to your path as follows:</li>
 </ol>
-<pre><code class="language-bash">export PATH=/Library/Developer/Toolchains/swift-latest.xctoolchain/usr/bin:&quot;${PATH}&quot;
+<pre><code class="language-bash">export PATH=/Library/Developer/Toolchains/&lt;toolchain name&gt;.xctoolchain/usr/bin:&quot;${PATH}&quot;
 </code></pre>
 <ol start="4">
 <li>Run <code>swift --version</code>. If you installed the toolchain successfully, you can get the following message.</li>
 </ol>
 <pre><code class="language-bash">$ swift --version
+# Or TOOLCHAINS=swiftwasm swift --version
 SwiftWasm Swift version 5.9.1 (swiftlang-5.9.1)
 Target: x86_64-apple-darwin21.6.0
 </code></pre>
-<blockquote>
-<p>Warning: <code>xcrun</code> finds executable binary based on <code>--toolchain</code> option or <code>TOOLCHAINS</code> environment variable, but it also sets <code>SDKROOT</code> as host target SDK (e.g. <code>MacOSX.sdk</code>). So you need to specify <code>-sdk</code> option as <code>/Library/Developer/Toolchains/swift-wasm-5.9.1-RELEASE.xctoolchain/usr/share/wasi-sysroot</code> when launching <code>swiftc</code> from xcrun. <code>swift build</code> or other SwiftPM commands automatically find SDK path based on target triple, so they don't require to specify it.</p>
-</blockquote>
 <h2><a class="header" href="#linux" id="linux">Linux</a></h2>
-<p>Packages for Linux are tar archives including a copy of the Swift compiler, linker, and related tools. You can install them anywhere as long as the extracted tools are in your PATH.</p>
-<h3><a class="header" href="#requirements-1" id="requirements-1">Requirements</a></h3>
-<ul>
-<li>Ubuntu 18.04 or 20.04 (64-bit)</li>
-</ul>
-<h3><a class="header" href="#installation-2" id="installation-2">Installation</a></h3>
 <ol>
-<li>Install required dependencies:</li>
+<li><a href="#latest-release">Download the latest package release</a> according to your Ubuntu version and CPU architecture.</li>
+<li>Follow the official Swift installation guide for Linux from <a href="https://www.swift.org/install/linux/#installation-via-tarball">swift.org</a> while skipping GPG key verification, which is not provided for SwiftWasm releases.</li>
 </ol>
-<pre><code class="language-bash"># Ubuntu 18.04
-apt-get install \
-          binutils \
-          git \
-          libc6-dev \
-          libcurl4 \
-          libedit2 \
-          libgcc-5-dev \
-          libpython2.7 \
-          libsqlite3-0 \
-          libstdc++-5-dev \
-          libxml2 \
-          pkg-config \
-          tzdata \
-          zlib1g-dev
-# Ubuntu 20.04
-apt-get install \
-          binutils \
-          git \
-          gnupg2 \
-          libc6-dev \
-          libcurl4 \
-          libedit2 \
-          libgcc-9-dev \
-          libpython2.7 \
-          libsqlite3-0 \
-          libstdc++-9-dev \
-          libxml2 \
-          libz3-dev \
-          pkg-config \
-          tzdata \
-          zlib1g-dev
-</code></pre>
-<ol start="2">
-<li>Download the latest binary release above.</li>
-</ol>
-<p>The <code>swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz</code> file is the toolchain itself.</p>
-<ol start="3">
-<li>Extract the archive with the following command:</li>
-</ol>
-<pre><code class="language-bash">tar xzf swift-wasm-&lt;VERSION&gt;-&lt;PLATFORM&gt;.tar.gz
-</code></pre>
-<p>This creates a usr/ directory in the location of the archive.</p>
-<ol start="4">
-<li>Add the Swift toolchain to your path as follows:</li>
-</ol>
-<pre><code>export PATH=$(pwd)/usr/bin:&quot;${PATH}&quot;
-</code></pre>
-<p>You can now execute the swiftc command to build Swift projects.</p>
+<!--- TODO: Update the link and uncomment after releasing 5.9.2
+## Experimental: Swift SDK
+
+SwiftWasm provides [Swift SDK](https://github.com/apple/swift-evolution/blob/main/proposals/0387-cross-compilation-destinations.md)s for WebAssembly. You can use the Swift SDK to cross-compile Swift packages for WebAssembly without installing the whole toolchain.
+
+To use the Swift SDK, you need to install the official Swift toolchain 5.9 or later. Then, you can install the Swift SDK using the following command:
+
+```bash
+$ swift experimental-sdk install https://github.com/swiftwasm/swift/releases/download/swift-wasm-5.9-SNAPSHOT-2024-03-02-a/swift-wasm-5.9-SNAPSHOT-2024-03-02-a-macos_arm64.artifactbundle.zip
+```
+
+After installing the Swift SDK, you can see the installed SDKs using the following command:
+
+```bash
+$ swift experimental-sdk list
+<SDK name>
+...
+```
+
+You can use the installed SDKs to cross-compile Swift packages for WebAssembly using the following command:
+
+```bash
+$ swift build --experimental-swift-sdk <SDK name>
+```
+
+-->
 <h2><a class="header" href="#docker" id="docker">Docker</a></h2>
 <p>SwiftWasm offical Docker images are hosted on <a href="https://github.com/orgs/swiftwasm/packages/container/package/swift">GitHub Container Registry</a>.</p>
 <p>SwiftWasm Dockerfiles are located on <a href="https://github.com/swiftwasm/swiftwasm-docker">swiftwasm-docker</a> repository.</p>
