--- a/examples/exporting-function.html
+++ b/examples/exporting-function.html
@@ -160,6 +160,7 @@
                 <div id="content" class="content">
                     <main>
                         <h1><a class="header" href="#exporting-function-for-host-environment" id="exporting-function-for-host-environment">Exporting function for host environment</a></h1>
+<h2><a class="header" href="#swift-510-or-earlier" id="swift-510-or-earlier">Swift 5.10 or earlier</a></h2>
 <p>You can expose a Swift function for host environment using special attribute and linker option.</p>
 <pre><code class="language-swift">// File name: lib.swift
 @_cdecl(&quot;add&quot;)
@@ -210,6 +211,22 @@ const addFn = instance.exports.add;
 console.log(&quot;2 + 3 = &quot; + addFn(2, 3))
 </code></pre>
 <p>If you use SwiftPM package, you can omit linker flag using clang's <code>__atribute__</code>. Please see <a href="https://github.com/swiftwasm/JavaScriptKit/pull/91/files">swiftwasm/JavaScriptKit#91</a> for more detail info</p>
+<h2><a class="header" href="#swift-60-or-later" id="swift-60-or-later">Swift 6.0 or later</a></h2>
+<p>If you use Swift 6.0 or later, you can use <code>@_expose(wasm, &quot;add&quot;)</code> and omit the <code>--export</code> linker flag.</p>
+<pre><code class="language-swift">// File name: lib.swift
+@_expose(wasm, &quot;add&quot;)
+@_cdecl(&quot;add&quot;) // This is still required to call the function with C ABI
+func add(_ lhs: Int, _ rhs: Int) -&gt; Int {
+    return lhs + rhs
+}
+</code></pre>
+<p>Then you can compile the Swift code with the following command without <code>--export</code> linker flag.</p>
+<pre><code class="language-bash">$ swiftc \
+    -target wasm32-unknown-wasi \
+    -parse-as-library \
+    lib.swift -o lib.wasm \
+    -Xclang-linker -mexec-model=reactor
+</code></pre>
 
                     </main>
 
