deploy: 6c90fd3c94f4d98411df384d3a470ae949621c81

--- a/print.html
+++ b/print.html
@@ -448,7 +448,7 @@ during development:</li>
 running. You can edit the app source code in your favorite editor and save it, <code>carton</code>
 will immediately rebuild the app and reload all browser tabs that have the app open.</li>
 </ol>
-<p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev</code> in its root directory. This will build the demo app that shows almost all of the currently
+<p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev --product TokamakDemo</code> in its root directory. This will build the demo app that shows almost all of the currently
 implemented APIs.</p>
 <h1><a class="header" href="#javascript-interoperation" id="javascript-interoperation">JavaScript interoperation</a></h1>
 <p><a href="https://github.com/swiftwasm/JavaScriptKit">JavaScriptKit</a> is a Swift framework to interact with JavaScript through WebAssembly.</p>
