--- a/getting-started/browser-app.html
+++ b/getting-started/browser-app.html
@@ -235,7 +235,7 @@ during development:</li>
 running. You can edit the app source code in your favorite editor and save it, <code>carton</code>
 will immediately rebuild the app and reload all browser tabs that have the app open.</li>
 </ol>
-<p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev</code> in its root directory. This will build the demo app that shows almost all of the currently
+<p>You can also clone <a href="https://github.com/TokamakUI/Tokamak">the Tokamak repository</a> and run <code>carton dev --product TokamakDemo</code> in its root directory. This will build the demo app that shows almost all of the currently
 implemented APIs.</p>
 
                     </main>
