deploy: 48e3ce60402db641f22407b51616eee3fdbe56a7

--- a/getting-started/setup.html
+++ b/getting-started/setup.html
@@ -190,6 +190,7 @@
 SwiftWasm Swift version 5.9.1 (swiftlang-5.9.1)
 Target: x86_64-apple-darwin21.6.0
 </code></pre>
+<p>If you want to uninstall the toolchain, you can remove the toolchain directory from <code>/Library/Developer/Toolchains/</code> and make sure to remove the toolchain from your <code>PATH</code>.</p>
 <h2><a class="header" href="#linux" id="linux">Linux</a></h2>
 <ol>
 <li><a href="#latest-release">Download the latest package release</a> according to your Ubuntu version and CPU architecture.</li>
