deploy: 5d62679cab37117b3aa383543a6a415617b7cae2

--- a/print.html
+++ b/print.html
@@ -542,7 +542,7 @@ written for <code>XCTest</code> if you port existing code to SwiftWasm. Your pro
 <code>Package.swift</code> package manifest for this to work. We assume that you use SwiftPM to build your
 project and that you have a working package manifest. Please follow <a href="getting-started/./swift-package.html">our SwiftPM guide</a> for new projects.</p>
 <h2><a class="header" href="#a-simple-test-case" id="a-simple-test-case">A simple test case</a></h2>
-<p>Let's assume you have a <code>SwiftWasmLibrary</code> target in your project that you'd like to test. Your
+<p>Let's assume you have an <code>Example</code> target in your project that you'd like to test. Your
 <code>Package.swift</code> should also have a test suite target with a dependency on the library target. It
 would probably look like this:</p>
 <pre><code class="language-swift">// swift-tools-version: 5.9
